0022871: Step Reader raises exception on invalid entity (null swept curve)

checking for null swept curve was added
Adding test case