src/StepToGeom/StepToGeom_MakeCurve.cxx
@@ -52,6 +52,9 @@
 
 Standard_Boolean StepToGeom_MakeCurve::Convert (const Handle(StepGeom_Curve)& SC, Handle(Geom_Curve)& CC)
 {
+  if (SC.IsNull()){
+    return Standard_False;
+  }
   if (SC->IsKind(STANDARD_TYPE(StepGeom_Line))) {
     const Handle(StepGeom_Line) L = Handle(StepGeom_Line)::DownCast(SC);
     return StepToGeom_MakeLine::Convert(L,*((Handle(Geom_Line)*)&CC));
